src/css/theme.css
*,
*:before,
*:after {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

html {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 16px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Times New Roman", Times, serif;
  line-height: 1.2;
}

article {
  line-height: 1.6;
}

dt,
dd {
  display: inline;
}

dt {
  font-weight: bold;
}

dd {
  margin-inline-start: 1ch;
}

code {
  font-size: 90%;
  background-color: #2b2b2b;
  color: #f8f8f2;
  padding: 0.15em 0.25em;
  border-radius: 0.3em;
  font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
}

